
* ==================== TOOL CHANGES ====================

* Memcheck:

* Massif:
  New monitor command 'all_snapshots <filename>' that dumps all snapshots
  taken so far.

* Helgrind:
  Memory and speed improvement for --history-level=full for big applications
  accessing a lot of memory with many different stacktraces.

* Callgrind:

* ==================== OTHER CHANGES ====================

* Address description logic (used by memcheck and helgrind)
  now describes addresses in anonymous segments, file mmap-ed
  segments, shared memory segments and the brk data segment.

* Option --error-markers=<begin>,<end> can be used to mark
  the begin/end of errors in textual output mode, to facilitate
  searching/extracting errors in output files mixing valgrind
  errors with program output.

* New Option --max-threads=<number> can be used to change the
  number of threads valgrind can handle. The default is 500 threads
  which should be more than enough for most applications.

* New Option --valgrind-stacksize=<number> can be used to change
  the size of the private thread stacks used by Valgrind.
  Useful to reduce memory use or increase the stack size if Valgrind
  segfaults due to stack exhausted.

* New Option --avg-transtab-entry-size=<number> can be used to tune
  the size of the translation table sectors, either to gain memory
  or to avoid too many retranslations.

* Valgrind can be built with Intel's ICC compiler. The required
  compiler version is 14.0 or later.

* New and modified GDB server monitor features:
  - When a signal is reported in GDB, you can now use the GDB convenience
    variable $_siginfo to examine detailed signal information.
 
  - Valgrind gdbserver now allows the user to change the signal
    to deliver to the process. So, use 'signal SIGNAL' to continue execution
    with SIGNAL instead of the signal reported to GDB. Use 'signal 0' to
    continue without passing the signal to the process.
