@@ -23,6 +23,10 @@ Thread #x was created
 Thread #x: Exiting thread still holds 1 lock
    ...
 
+
+Process terminating with default action of signal 6 (SIGABRT)
+   ...
+   by 0x........: main (tc22_exit_w_lock.c:48)
 ---Thread-Announcement------------------------------------------
 
 Thread #x is the program's root thread
